# sympy-proof

./: README.md  pyproject.toml
examples/: conviction_voting.ipynb  conviction_voting.py  nqg_voting.ipynb  nqg_voting.py
